--- a/statsjooks/package.json
+++ b/statsjooks/package.json
@@ -21,6 +21,7 @@
     "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.1",
     "package-lock.json": "^1.0.0",
+    "papaparse": "^5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
