--- a/statsjooks/package.json
+++ b/statsjooks/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.2.0",
     "buffer": "^6.0.3",
     "chart.js": "^3.9.1",
+    "convert-csv-to-json": "^1.5.0",
     "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.1.1",
@@ -21,6 +22,7 @@
     "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.1",
     "package-lock.json": "^1.0.0",
+    "package.json": "^2.0.1",
     "papaparse": "^5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
