Add exact password, inexact city

--- a/statsjooks/public/manifest.json
+++ b/statsjooks/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Jooks Statistics",
+  "name": "Discover the statistics of your Jooks routes !",
   "icons": [
     {
       "src": "favicon.ico",
