--- a/statsjooks/package.json
+++ b/statsjooks/package.json
@@ -18,6 +18,7 @@
     "crypto-js": "^4.1.1",
     "emailjs": "^4.0.1",
     "firebase": "^9.15.0",
+    "fuse.js": "^6.6.2",
     "git": "^0.1.5",
     "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.1",
