Deploy not working but serve OK
Deploy not working but serve OK

--- a/statsjooks/.firebaserc
+++ b/statsjooks/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "statsjooks"
-  }
+    "default": "statsjooks-e80dd",
+    "statsjooks": "statsjooks-e80dd"
+  },
+  "targets": {},
+  "etags": {}
 }
