--- a/statsjooks/package.json
+++ b/statsjooks/package.json
@@ -22,6 +22,7 @@
     "git": "^0.1.5",
     "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.1",
+    "lint": "^0.8.19",
     "package-lock.json": "^1.0.0",
     "package.json": "^2.0.1",
     "papaparse": "^5.3.2",
